# gloo-native

./: .gitignore  .gitmodules  binding.gyp  core-native.d.ts  gloo-native.d.ts  gloo-native.js  package-lock.json  package.json  tsconfig.json
src/: test-listener.js
src/cpp/: CMakeLists.txt  main.cc  napi-thread-safe-callback-impl.h  napi-thread-safe-callback.h
src/cpp/darwin/: DeviceApi.h  DeviceInterface.cc  MicrophoneDevice.h  OSXDeviceManager.cc  OSXHelpers.cc  OSXHelpers.h  OSXWindowManager.cc  OSXWindowManager.h  WindowTracker.cc  WindowTracker.h
src/cpp/mic_detector/: DeviceInterface.h  DeviceManager.h  IDevice.h  IDeviceManager.h  ITrackable.h  MicDetector.cc  MicDetector.h
src/cpp/screen_tracker/: ScreenTracker.cc  ScreenTracker.h  WindowTracker.h
src/cpp/win/: DeviceInterface.cc  MicrophoneDevice.cc  MicrophoneDevice.h  WindowTracker.cc  helpers.h
src/ts/: addon.d.ts  addon.js  index.ts
